[Changes 1.2.2]

* Fix $myservers(1) to only return registered server refnums, so it now
  works the way EPIC does which was always the intention. (caf)

* Fix CHANGE_NICK_ON_KILL feature. (caf)

* Improve error handling in /READLOG. (caf)

* Fix memory leak in /QUEUE -FLUSH. (caf)

* Messages sent by /SV and /PASTE should be logged in the send log. (caf)

* Change send_text() to combine command, hook and log arguments into one
  set of flags. (caf)

* Update to build against modern libtcl (don't access tcl_interp->result
  directly). (caf)

* Add /FSET SEND_ENCRYPTED_PUBLIC format. (caf)

* Correct order of arguments to /FSET SEND_ENCRYPTED_MSG and
  SEND_ENCRYPTED_NOTICE and improve default formatting. (caf)

* Add /FSET ENCRYPTED_PUBLIC and ENCRYPTED_PUBLIC_NOTICE formats, and fix
  use of ENCRYPTED_PRIVMSG and ENCRYPTED_NOTICE so they use the right number
  of arguments. (caf)

* Move all handling of SED messages and notices into ctcp.c, re-enable
  SED notices. (caf)

* Handle SED-encrypted CTCP replies properly. (caf)

* Add sent_nick flag to NickList struct, bump MODULE_VERSION. (caf)

* Write correct length to terminal for unflash sequences. (caf)

* Update source file dependencies in Makefile.in. (caf)

* Remove unused opendir.c. (caf)

* Remove unused scandir() compat implementation. (caf)

* Use the same compat.o and ircsig.o object files for the wserv and scr-bx
  binaries as for the main binary. (caf)

* Simplify handling of /DETACH socket path. (caf)

* Remove netfinger client code (no-one is running fingerd anymore) and
  repurpose /FINGER command to send a CTCP FINGER instead. (caf)

* Enable use of cached whowas info for /IG* and /UNIG* commands. (caf)

* Add support for OpenSSL 1.1.0 to configure script. (caf)

* /UNBAN <nick> can use cached whowas info to unset bans. (caf)

* Unsetting CMDCHARS sets it back to the default. (caf)

* Fix a double-free bug when a window on an alternate screen queries an exec
  process. (caf)
